# solrock

./: README.md  package-lock.json  package.json
helloworld/: Cargo.toml
helloworld/client/: hello_world.ts  main.ts
helloworld/client/util/: store.ts
helloworld/src/: lib.rs
src/: App.tsx
src/components/: Connect2Phantom.tsx  HelloWorld.tsx
transfer-lamports/: Cargo.toml
transfer-lamports/src/: processor.rs
transfer-lamports/tests/: functional.rs
