
[package]
name = "helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <keita.curry.jp@gmail.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
