[package]
name = "transfer-lamports"
version = "0.1.0"
description = "Solana Program Transfer Lamports Example"
authors = ["Solana Maintainers <keita.curry.jp@gmail.com>"]
repository = "https://github.com/keitaj/solrock"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.10.10"

[dev-dependencies]
solana-program-test = "1.10.10"
solana-sdk = "1.10.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]